Fixed alignment of TopBar

--- a/webapp/components/topBar/TopBar.css
+++ b/webapp/components/topBar/TopBar.css
@@ -3,7 +3,11 @@
   justify-content: 'center';
 }
 
-.home-button {
+#home-button {
   color: white;
   text-decoration: none;
+}
+
+#upload-button {
+  margin-right: 30px;
 }
